Team name error handling
